<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <!-- Splash Screen -->
    <fragment
        android:id="@+id/splashFragment"
        android:name="com.example.eventmanagement2.ui.splash.SplashFragment"
        android:label="SplashFragment"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splashFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splashFragment_to_dashboardFragment"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Auth Flow -->
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.eventmanagement2.ui.auth.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_signUpFragment"
            app:destination="@id/signUpFragment" />
        <action
            android:id="@+id/action_loginFragment_to_dashboardFragment"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.example.eventmanagement2.ui.auth.SignUpFragment"
        android:label="@string/sign_up"
        tools:layout="@layout/fragment_signup">
        <action
            android:id="@+id/action_signUpFragment_to_dashboardFragment"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_signUpFragment_pop"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment" />
    </fragment>

    <!-- Main Flow -->
    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.example.eventmanagement2.ui.dashboard.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_global_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/dashboardFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Add other navigation destinations here -->

</navigation>
